--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                 <a class="nav-link" href="#shoes">Shoes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#bagpack">Bagpack</a>
+                <a class="nav-link" href="#Backpack">Backpack</a>
               </li>
               <li class="nav-item">
-               <a class="nav-link " href="#Contact Us">Contact Us</a>
+               <a class="nav-link " href="#Subscribe"> Subscribe</a>
               </li>
             </ul>
           </div>
@@ -99,14 +99,133 @@
   </div>
 </div>
 
+<div class="container categories">
+<div class="row">
+  <div class="col-md-4  "   >
+  <div class="cat-one d-flex justify-content-between align-items-center">
+    <h1>Watch</h1>
+    <img src="panda-commerce/categories/watch.png" alt="">
+  </div>
+  </div>
+  <div class="col-md-4  "  >
+    <div class="cat-two d-flex justify-content-between align-items-center">
+    <h1>Bag</h1>
+    <img src="panda-commerce/categories/bag.png" alt="">
+  </div>
+  </div>
+  <div class="col-md-4  ">
+    <div class="cat-three d-flex justify-content-between align-items-center">
+    <h1>Shoes</h1>
+    <img src="panda-commerce/categories/shoes.png" alt="">
+  </div>
+  </div>
+</div>
+
+</div>
+
+<div class="container shoes" id="shoes">
+<h3>Shoes</h3>
+<div class="row row-cols-1 row-cols-md-3 g-4">
+  <div class="col">
+    <div class="card">
+      <img src="panda-commerce/shoes/shoe-1.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Supply 350</h5>
+        <p class="card-text">It is a full package with Carbon Fiber plate and Puma’s PEBAX-based Nitro Elite foam. As with other super shoes, it is primarily meant for racing longer distances. It is however versatile enough to be used for distances from 5K to Marathon.</p>
+        <h5>$360</h5>
+        <button class="Buy-now">Buy Now>></button>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="panda-commerce/shoes/shoe-2.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Nike 320</h5>
+        <p class="card-text">It is a full package with Carbon Fiber plate and Puma’s PEBAX-based Nitro Elite foam. As with other super shoes, it is primarily meant for racing longer distances. It is however versatile enough to be used for distances from 5K to Marathon.</p>
+        <h5>$430</h5>
+        <button class="Buy-now">Buy Now>></button>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="panda-commerce/shoes/shoe-3.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Red Max 340</h5>
+        <p class="card-text">It is a full package with Carbon Fiber plate and Puma’s PEBAX-based Nitro Elite foam. As with other super shoes, it is primarily meant for racing longer distances. It is however versatile enough to be used for distances from 5K to Marathon.</p>
+        <h5>$350</h5>
+        <button class="Buy-now">Buy Now>></button>
+      </div>
+    </div>
+  </div>
+  
+</div>
+</div>
+
+<div class="container Backpack" id="Backpack">
+  <h3>Backpack</h3>
+  <div class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="col">
+      <div class="card h-100">
+        <img src="panda-commerce/bags/bag-1.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Red Backpack</h5>
+          <h5>$220</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        </div>
+        <div class="card-footer">
+          <button class="Buy-now">Buy Now>></button>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card h-100">
+        <img src="panda-commerce/bags/bag-2.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Blue Backpack</h5>
+          <h5>$145</h5>
+          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+        </div>
+        <div class="card-footer">
+          <button class="Buy-now">Buy Now>></button>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card h-100">
+        <img src="panda-commerce/bags/bag-3.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Black Backpack</h5>
+          <h5>$299</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+        </div>
+        <div class="card-footer">
+          <button class="Buy-now">Buy Now>></button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
+
+<div class="container d-flex justify-content-center align-items-center  orange-bg" id="Subscribe">
+  <div >
+<h3>LET'S STAY IN TOUCH</h3>
+<h6>Get Update On Sales,Specials and more.</h6>
+<input class="form-control" type="text" >
+<button  class="Buy-now">Submit</button>
+</div>
+
+</div>
 
 
-
-
-
-
-
-
+<footer>
+  <small>
+ 
+    © All rights reserved .Dhaka,Bangladesh.</small>
+ 
+</footer>
 
 
 
