--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <h1>MI LED TV</h1>
                 <p>This is best TV for sports loving people.They can enjoy cricket ,football in it.</p>
                 <h1 class="price">$1200</h1>
-                <button class="Buy-now">Buy Now</button>
+                <button class="btn Buy-now">Buy Now</button>
             </div>
             <div class="col-md-5">
                 <img src="panda-commerce/banner-images/tv.png" class="d-block w-100" alt="...">
@@ -67,7 +67,7 @@
                 <h1> Corsair Headphone</h1>
                 <p>This is the  best  headphone for gamers ,music enthusiastics.It has a good bass ,clear audio and mics with noise reduction.</p>
                 <h1 class="price">$420</h1>
-                <button class="Buy-now">Buy Now</button>
+                <button class="btn Buy-now">Buy Now</button>
             </div>
             <div class="col-md-5">
                 <img src="panda-commerce/banner-images/headphone.png" class="d-block w-100" alt="..."> 
@@ -80,7 +80,7 @@
                 <h1>Xbox</h1>
                 <p>This is the  best Xbox for gamers .They can play game comfortably. </p>
                 <h1 class="price">$2300</h1>
-                <button class="Buy-now">Buy Now</button>
+                <button type="button" class="btn Buy-now">Buy Now</button>
             </div>
             <div class="col-md-5">
                 <img src="panda-commerce/banner-images/xbox.png" class="d-block w-100" alt="...">
@@ -133,7 +133,7 @@
         <h5 class="card-title">Supply 350</h5>
         <p class="card-text">It is a full package with Carbon Fiber plate and Puma’s PEBAX-based Nitro Elite foam. As with other super shoes, it is primarily meant for racing longer distances. It is however versatile enough to be used for distances from 5K to Marathon.</p>
         <h5>$360</h5>
-        <button class="Buy-now">Buy Now>></button>
+        <button  class=" btn btn-light Buy-now">Buy Now>></button>
       </div>
     </div>
   </div>
@@ -144,7 +144,7 @@
         <h5 class="card-title">Nike 320</h5>
         <p class="card-text">It is a full package with Carbon Fiber plate and Puma’s PEBAX-based Nitro Elite foam. As with other super shoes, it is primarily meant for racing longer distances. It is however versatile enough to be used for distances from 5K to Marathon.</p>
         <h5>$430</h5>
-        <button class="Buy-now">Buy Now>></button>
+        <button type="button"  class=" btn Buy-now">Buy Now>></button>
       </div>
     </div>
   </div>
@@ -155,7 +155,7 @@
         <h5 class="card-title">Red Max 340</h5>
         <p class="card-text">It is a full package with Carbon Fiber plate and Puma’s PEBAX-based Nitro Elite foam. As with other super shoes, it is primarily meant for racing longer distances. It is however versatile enough to be used for distances from 5K to Marathon.</p>
         <h5>$350</h5>
-        <button class="Buy-now">Buy Now>></button>
+        <button type="button" class=" btn Buy-now">Buy Now>></button>
       </div>
     </div>
   </div>
@@ -175,7 +175,7 @@
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
         </div>
         <div class="card-footer">
-          <button class="Buy-now">Buy Now>></button>
+          <button type="button" class=" btn Buy-now">Buy Now>></button>
         </div>
       </div>
     </div>
@@ -188,7 +188,7 @@
           <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
         </div>
         <div class="card-footer">
-          <button class="Buy-now">Buy Now>></button>
+          <button type="button" class=" btn Buy-now">Buy Now>></button>
         </div>
       </div>
     </div>
@@ -201,7 +201,7 @@
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
         </div>
         <div class="card-footer">
-          <button class="Buy-now">Buy Now>></button>
+          <button type="button" class="btn Buy-now ">Buy Now>></button> 
         </div>
       </div>
     </div>
@@ -214,7 +214,7 @@
 <h3>LET'S STAY IN TOUCH</h3>
 <h6>Get Update On Sales,Specials and more.</h6>
 <input class="form-control" type="text" >
-<button  class="Buy-now">Submit</button>
+<button type="button"  class=" btn Buy-now">Submit</button>
 </div>
 
 </div>
@@ -223,7 +223,7 @@
 <footer>
   <small>
  
-    © All rights reserved .Dhaka,Bangladesh.</small>
+    © 2022.Panda Commerce. All rights reserved .Dhaka,Bangladesh.</small>
  
 </footer>
 
