--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <h5 class="card-title">Supply 350</h5>
         <p class="card-text">It is a full package with Carbon Fiber plate and Puma’s PEBAX-based Nitro Elite foam. As with other super shoes, it is primarily meant for racing longer distances. It is however versatile enough to be used for distances from 5K to Marathon.</p>
         <h5>$360</h5>
-        <button  class=" btn btn-light Buy-now">Buy Now>></button>
+        <button  class=" btn Buy-now">Buy Now>></button>
       </div>
     </div>
   </div>
